examples/bad/03-wrong-return-type.wlk
# (wrong return type)

def main() -> Void:
    return 6